[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/SplashScreen.gd" type="Script" id=1]

[node name="SplashScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.523
margin_top = -44.9955
margin_right = 146.523
margin_bottom = 44.9955
custom_constants/vseparation = 18

[node name="LevelLabel" type="Label" parent="GridContainer"]
margin_right = 292.0
margin_bottom = 38.0
text = "Level 1"
align = 1

[node name="GameName" type="Label" parent="GridContainer"]
margin_top = 56.0
margin_right = 292.0
margin_bottom = 94.0
text = "BreadBread"
align = 1

[node name="SplashLengthTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="SplashLengthTimer" to="." method="_on_SplashLengthTimer_timeout"]
